feat: Rev Prova

--- a/Anotações/AULA_2024_08_29.md
+++ b/Anotações/AULA_2024_08_29.md
@@ -2,7 +2,7 @@
 ### Componentes da SIG:
 - Hardware, Software, Dados, Pessoas e Processos
 - Interdependência e Fluxo de informação
-- Fornecem singerdia e qalidade na tomada de decisao
+- Fornecem sinergia e qualidade na tomada de decisao
 
 ### A empresa na era da informação
 - Tecnologia como mediadora das relações humanas e entre máquinas
